# youtube-unsubscriber

./: .black  .env  .gitignore  .pre-commit-config.yaml  README.md  fetch_channel_metadata.py  fetch_content_types.py  main.py  pyproject.toml  run.py  schema.sql  setup_database.py
.cursor/: settings.json
schema/: schema.sql
scripts/: lint.py  setup-dev.py
src/: __init__.py  channel_fetcher.py  content_analyzer.py  database.py  main.py  quota_tracker.py  ui.py  youtube_api.py
youtube_unsubscriber/: README.md  config.py  database.py  main.py  quota_tracker.py  ui.py  youtube_api.py
