[project]
description = "A script to programmatically manage YouTube subscriptions."
requires-python = ">=3.9"
name = "youtube-unsubscriber"
version = "1.0.0"
dependencies = [
  "google-api-python-client>=2.0.0",
  "google-auth-oauthlib>=0.4.1",
  "psycopg2-binary>=2.9.3",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
]

[project.scripts]
youtube-unsubscriber = "src.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["black>=25.9.0", "pylint>=3.3.8"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
disable = [
  "C0114", # missing-module-docstring
  "C0116", # missing-function-docstring
  "R0903", # too-few-public-methods
  "R0913", # too-many-arguments
  "W0613", # unused-argument
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 7
max-locals = 15
max-returns = 6
max-branches = 12
