[project]
name = "youtube-unsubscriber"
version = "1.0.0"
description = "A script to programmatically manage YouTube subscriptions."
requires-python = ">=3.9"
dependencies = [
  "google-api-python-client>=2.0.0",
  "google-auth-oauthlib>=0.4.1",
  "psycopg2-binary>=2.9.3",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
]

[project.scripts]
youtube-unsubscriber = "src.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["black>=25.9.0", "pre-commit>=4.3.0", "pylint>=3.3.8"]
